# angry-github-issue-alert-slack

./: Cargo.toml  README.md
src/: lib.rs
