[package]
name = "angry-github-issue-alert-slack"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
github-flows = "0.5.0"
slack-flows = "0.2.6"
tokio_wasi = { version = "1.25.0", features = ["macros", "rt"] }
dotenv = "0.15.0"
openai-flows = "0.7.2"
store-flows = "0.3.1"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.96"
flowsnet-platform-sdk = "0.1.5"
